--- a/app.yaml
+++ b/app.yaml
@@ -2,6 +2,10 @@
 runtime: nodejs
 env: flex
 
+runtime_config:
+  operating_system: "ubuntu22"
+  runtime_version: "20"
+
 # Only use one instance
 manual_scaling:
   instances: 1
