--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Oli Bills",
   "license": "ECS",
   "dependencies": {
+    "axios": "^1.13.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "socket.io": "^4.3.1"
